# final-final-project

install/: local_setup.sh  setup.sh
install/bwi_nav_test/lib/bwi_nav_test/: simple_nav  trash_navigator
install/bwi_nav_test/share/bwi_nav_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bwi_nav_test/share/bwi_nav_test/launch/: simple_nav.launch.py
log/: latest_build
src/: package.xml  package.xml.backup  setup.py.backup  trash_nav.launch.py  trash_navigator.py
src/bwi_nav_test/: setup.cfg  setup.py  setup.py.save
src/bwi_nav_test/bwi_nav_test/: simple_nav.py  trash_navigator.py
src/bwi_nav_test/bwi_nav_test/launch/: simple_nav.launch.py
src/bwi_nav_test/launch/: simple_nav.launch.py
src/bwi_nav_test/resource/: bwi_nav_test.xml
