<?xml version="1.0"?>
<package format="3">
  <name>bwi_nav_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rshreya.in@gmail.com">2_fri</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
